@@ -1,3 +1,5 @@
+import junit.framework.Test
+
 buildscript {
     repositories {
         mavenCentral()
@@ -16,6 +18,8 @@ android {
         applicationId 'net.valentinc.uppa.planning'
         minSdkVersion 8
         targetSdkVersion 21
+        testPackageName "net.valentinc.uppa.planning.test"
+        testInstrumentationRunner "net.valentinc.uppa.planning.test.androidTest"
     }
     buildTypes {
         release {
@@ -26,12 +30,36 @@ android {
             manifest.srcFile 'AndroidManifest.xml'
             res.srcDir file('res/')
         }
+        unitTest {
+            java.srcDir file('test')
+            resources.srcDir file('test/resources')
+        }
+
     }
+    configurations {
+        unitTestCompile.extendsFrom runtime
+        unitTestRuntime.extendsFrom unitTestCompile
+    }
+
+    task unitTest(type:Test, dependsOn: assemble) {
+        description = "run unit tests"
+        testClassesDir = project.sourceSets.unitTest.output.classesDir
+        classpath = project.sourceSets.unitTest.runtimeClasspath
+    }
+
+    build.dependsOn unitTest
     lintOptions {
         abortOnError false
     }
 }
-
 dependencies {
+    testCompile 'junit:junit:4.+'
+    testCompile "org.mockito:mockito-core:1.9.5"
+}
 
+testOptions {
+    unitTests.all {
+        // All the usual Gradle options.
+        jvmArgs '-XX:MaxPermSize=1024m'
+    }
 }
